# search_weather

./: .flake8  README.md  deploy.py  pyproject.toml
src/: main.py
src/search_weather/: get_weather.py  main.py  parse_query.py
tests/: test_main.py
