[tool.poetry]
name = "search_weather"
version = "0.1.0"
description = "날씨 검색 패키지"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
spacy = "^3.8.2"
geopy = "^2.4.1"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
